fix: removed second scrollbar

--- a/madness/2026/index.css
+++ b/madness/2026/index.css
@@ -16,7 +16,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  min-height: 100svh;
+  scrollbar-width: none;
 }
 
 body {
@@ -120,9 +120,7 @@ header {
 #hero {
   display: flex;
   flex-direction: column;
-  padding: 2svh;
   text-align: center;
-  height: 100svh;
 }
 
 #hero > h2,
@@ -248,11 +246,11 @@ header {
   color: white;
   overflow-y: scroll;
   mask-image: linear-gradient(to bottom, transparent 0%, black var(--header-height), black 100%);
-  height: 100svh;
+  height: calc(100svh - var(--header-height));
 }
 
 section {
-  padding: 0 2rem;
+  padding: 4vh 2rem;
 }
 
 /* if have more sponsors, add sponsors here too */
@@ -303,8 +301,7 @@ table td {
 .nav-links__links {
   display: flex;
   width: 100%;
-  margin: 0 7vw;
-  gap: min(1.5rem, 3vw);
+  gap: 5%;
   justify-content: center;
 }
 
